Assignment 1+2/style.css
* {
    font-family: 'Poppins', sans-serif;
    padding: 0;
    margin: 0;
    box-sizing: border-box;
    

  }

body {

    width: 100%;
    background-color: white;
    background-position: top;
    background-size: cover;
    background-repeat: no-repeat;


}

nav {
    top: 0;
    padding: 10px;
}

nav ul {
    list-style-type: none;
    margin: 0;
    padding: 0;
}

.right {
    float: right;
    display: flex;
    width: 16%;
    bottom: 4px;
}

nav li a {
    color: whitesmoke;
    text-align: left;
    padding: 10px 20px;
    text-decoration: none;
    font-size: large;
}

nav img {
    float: left;
    background-color: transparent;
    width: 15%;
}

nav .right a:hover {
    background-color: darkgrey;
    opacity: 90%;

}

.frontPageText h1 {
    position: fixed;
    right: 60%;
    top: 200px;
    color: whitesmoke;
    text-shadow: 5px 3px #181818;
    margin: auto;

}

header.index {
    height: 790px;

}
  
.container {
    height: 100vh;
    left: 0;
    width: 100%;
    overflow: hidden;
    position: absolute;

  
}
   
.title_wrapper {
    position: fixed;
    display: block;
    margin: auto;
    width: 100%;
    top: 0%;
}
  
.container_image {
    background-image: url(https://multimatic.wpengine.com/wp-content/uploads/2022/12/Ford_GTMkIV_02_1920x1080.jpg?w=1920&q=75Q);
    background-size:100vw auto;
    background-position: center;
    background-attachment: fixed;
    
}
   
section {
    margin: auto;
    max-width: 800px;
    height: 600px;
}
  
section h2 {
    font-family: 'Fraunces', serif;
    padding-bottom: 10px;
}
  
section p {
    padding-bottom: 10px;
    font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Helvetica, Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji";
}

/* Gallery css */

header.gallery {
    color: gray;
    padding: 0px;
    top: 0;
    background-color: #181818;
  }
  
  h1 {
    margin: 0;
    font-size: 40px;
  }
  
  .car-container {
    display: flex;
    flex-wrap: wrap;
    justify-content: center;
    margin-top: 20px;
  }
  
  .car {
    background-color: #f2f2f2;
    border-radius: 10px;
    box-shadow: 0 0 10px rgba(0, 0, 0, 0.2);
    margin: 20px;
    width: 300px;
    padding: 20px;
  }
  
  .car img {
    width: 100%;
    border-radius: 10px;
    margin-bottom: 10px;
  }
  
  .car h2 {
    font-size: 24px;
    margin: 0;
  }
  
  .car p {
    margin: 0;
  }

